src/test/resources/Parser/SyntaxErrors/IncompatibleTypesReturn.front
class A:
    test () -> float64 {
        return 13; //TODO should work on next literal rework
    }